--- a/externals/llvm-external-projects/torch-mlir-dialects/lib/Dialect/TMTensor/IR/CMakeLists.txt
+++ b/externals/llvm-external-projects/torch-mlir-dialects/lib/Dialect/TMTensor/IR/CMakeLists.txt
@@ -11,18 +11,18 @@ add_mlir_library(TorchMLIRTMTensorDialect
   TorchMLIRTMTensorOpsIncGen
 
   LINK_LIBS PUBLIC
-  MLIRAffine
+  MLIRAffineDialect
   MLIRDialectUtils
   MLIRIR
-  MLIRLinalg
-  MLIRMath
-  MLIRMemRef
+  MLIRLinalgDialect
+  MLIRMathDialect
+  MLIRMemRefDialect
   MLIRPass
   MLIRSideEffectInterfaces
   MLIRSupport
-  MLIRSCF
-  MLIRFunc
-  MLIRTensor
+  MLIRSCFDialect
+  MLIRFuncDialect
+  MLIRTensorDialect
   MLIRViewLikeInterface
 )
 
