--- a/externals/llvm-external-projects/torch-mlir-dialects/tools/torch-mlir-dialects-opt/CMakeLists.txt
+++ b/externals/llvm-external-projects/torch-mlir-dialects/tools/torch-mlir-dialects-opt/CMakeLists.txt
@@ -1,13 +1,13 @@
 set(LIBS
-  MLIRArithmetic
+  MLIRArithmeticDialect
   MLIRDialect
-  MLIRLinalg
-  MLIRMemRef
+  MLIRLinalgDialect
+  MLIRMemRefDialect
   MLIROptLib
-  MLIRSCF
+  MLIRSCFDialect
   MLIRSCFTransforms
-  MLIRFunc
-  MLIRTensor
+  MLIRFuncDialect
+  MLIRTensorDialect
   MLIRTransforms
   TorchMLIRTMTensorDialect
   TorchMLIRTMTensorPasses
