Missed dependency on building the TorchMLIRConversionPasses target.

--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -13,6 +13,8 @@ add_mlir_library(TorchMLIRConversionPasses
 
   DEPENDS
   TorchMLIRConversionPassIncGen
+  MLIRTorchOpsIncGen
+  MLIRTorchTypesIncGen
 
   LINK_COMPONENTS
   Core
