--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
--f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
---pre
-torch
-
 numpy
-torchvision
-
 # Build requirements.
 pybind11
 wheel
@@ -12,5 +6,15 @@ setuptools
 cmake
 ninja
 
-# Test Requirements
-pillow
+# Python dependencies required for development
+astunparse
+expecttest
+future
+numpy
+psutil
+pyyaml
+requests
+six
+types-dataclasses
+typing_extensions
+sympy
