--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -80,6 +80,8 @@ if(TORCH_MLIR_ENABLE_JIT_IR_IMPORTER)
       LIBTORCH_CACHE=${LIBTORCH_CACHE}
       LIBTORCH_VARIANT=${LIBTORCH_VARIANT}
       CMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES}
+      CMAKE_C_COMPILER_LAUNCHER=${CMAKE_C_COMPILER_LAUNCHER}
+      CMAKE_CXX_COMPILER_LAUNCHER=${CMAKE_CXX_COMPILER_LAUNCHER}
       ${CMAKE_CURRENT_SOURCE_DIR}/../build_tools/build_libtorch.sh
       RESULT_VARIABLE _result
   )
