--- a/python/torch_mlir/csrc/base_lazy_backend/CMakeLists.txt
+++ b/python/torch_mlir/csrc/base_lazy_backend/CMakeLists.txt
@@ -16,6 +16,7 @@ include_directories(BEFORE
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
   ${Python3_INCLUDE_DIRS}
+  ${PROJECT_SOURCE_DIR}/python
 )
 link_directories("${TORCH_INSTALL_PREFIX}/lib")
 
@@ -37,6 +38,7 @@ add_custom_command(
   COMMAND ${Python3_EXECUTABLE} ${PROJECT_SOURCE_DIR}/build_tools/autogen_ltc_backend.py
   OUTPUT
   ${CMAKE_BINARY_DIR}/generated_backend.hash
+  ${LTC_GENERATED}
   DEPENDS
   ${PROJECT_SOURCE_DIR}/build_tools/autogen_ltc_backend.py
   ${PROJECT_SOURCE_DIR}/build_tools/autogen_ltc_backend.yaml
@@ -52,6 +54,7 @@ add_custom_target(
   torch_mlir_ltc_backend_generated ALL
   DEPENDS
   ${CMAKE_BINARY_DIR}/generated_backend.hash
+  ${LTC_GENERATED}
 )
 
 add_library(torch_mlir_ltc_backend SHARED
