--- a/.github/workflows/buildRelease.yml
+++ b/.github/workflows/buildRelease.yml
@@ -54,7 +54,7 @@ jobs:
 
   build_macos:
     name: MacOS Build
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
     - name: Get torch-mlir
       uses: actions/checkout@v2
