--- a/build_tools/autogen_ltc_backend.yaml
+++ b/build_tools/autogen_ltc_backend.yaml
@@ -52,6 +52,7 @@ supported:
 
 # ops required for functionalization
 - lift
+- lift_fresh
 # Below are all operators that are "composite" in core,
 # but require us to explicitly re-enable functionalization in order to use them.
 # Why? These operators are all CompositeExplicitAutograd, which mean that they run
