--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -47,7 +47,7 @@ jobs:
     - name: llvm-binary-torch-src-or-binary
       # Should be the fastest builds for CI and fails fast
       # OSX CMake flags are ignore on Linux
-      if: matrix.llvmtype == 'binary' and matrix.llvmbuildtype == 'in-tree'
+      if: matrix.llvmtype == 'binary'
       run: |
         cd $GITHUB_WORKSPACE
         cmake $GITHUB_WORKSPACE/externals/llvm-project/llvm -B build -GNinja \
@@ -71,7 +71,7 @@ jobs:
     - name: llvm-source-out-of-tree-torch-src-or-binary
       # This build takes a while but is expected to almost always be cached.
       # A cache invalidation occurs when the committed LLVM version is changed.
-      if: matrix.llvmtype == 'source' and matrix.llvmbuildtype == 'out-of-tree'
+      if: matrix.llvmtype == 'source'
       run: |
         cd $GITHUB_WORKSPACE
         cmake -Bllvm-build -GNinja \
