--- a/build_tools/autogen_ltc_backend.yaml
+++ b/build_tools/autogen_ltc_backend.yaml
@@ -14,6 +14,13 @@ blacklist:
 - size
 - where
 - copy_
+- empty_like
+- ones_like
+- full_like
+- zeros_like
+- rand_like
+- randn_like
+- randint_like
 
 # Disabled for consistency with TS backend
 - new_empty
