--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,8 @@ if(TORCH_MLIR_ENABLE_MHLO)
   endif()
 endif()
 
+option(TORCH_MLIR_ENABLE_LTC "Enables LTC backend" ON)
+
 torch_mlir_add_llvm_external_project(
   torch-mlir-dialects
   TORCH_MLIR_DIALECTS
