--- a/python/torch_mlir/dialects/torch/importer/jit_ir/csrc/CMakeLists.txt
+++ b/python/torch_mlir/dialects/torch/importer/jit_ir/csrc/CMakeLists.txt
@@ -10,7 +10,14 @@ include_directories(BEFORE
   )
 link_directories("${TORCH_INSTALL_PREFIX}/lib")
 
-add_library(TorchMLIRJITIRImporter SHARED
+# Hack! Currently out-of-tree build fails when this is set to SHARED, so we have this toggle
+if(TORCH_MLIR_ENABLE_LTC)
+  set(LIBRARY_TYPE "SHARED")
+else()
+  set(LIBRARY_TYPE "MODULE")
+endif()
+
+add_library(TorchMLIRJITIRImporter ${LIBRARY_TYPE}
   class_annotator.cpp
   class_annotator_pybind.cpp
   get_registered_ops.cpp
