Add mhlo to bazel build

--- a/utils/bazel/WORKSPACE.bazel
+++ b/utils/bazel/WORKSPACE.bazel
@@ -30,8 +30,17 @@ llvm_configure(
   repo_mapping = {
     "@python_runtime": "@local_config_python",
   },
+  targets = [
+      "X86",
+  ]
 )
 llvm_disable_optional_support_deps()
+
+
+local_repository(
+  name = "mlir-hlo",
+  path = "../../externals/mlir-hlo/"
+)
 
 new_local_repository(
     name = "torch-mlir-raw",
